# risk-atlas-nexus

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  test.py
.github/: dco.yml
datasets/BeaverTails/: train.csv
docs/: .nav.yml  index.md
docs/concepts/: Chain_of_thought_templates.md  Contributing_a_taxonomy.md  Risk_Categorization.md
docs/examples/: index.md
docs/examples/notebooks/: RiskMelDemo.ipynb  Risk_Atlas_Nexus_Quickstart.ipynb  autoassist_questionnaire.ipynb  domain_identification.ipynb  full_explanation_pipeline.ipynb  generate_crosswalk.ipynb  index.md  risk_categorization.ipynb  risk_identification.ipynb  schema_viewer.ipynb
docs/installation/: index.md
docs/ontology/: Action.md  Adapter.md  AdapterType.md  AiAgent.md  AiEval.md  AiEvalResult.md  AiModel.md  AiOffice.md  AiProvider.md  AiSystem.md  AiTask.md  Any.md  BaseAi.md  BenchmarkMetadataCard.md  Consequence.md  Container.md  Dataset.md  Documentation.md  Entity.md  EuAiRiskCategory.md  Impact.md  IncidentHaltedclass.md  IncidentMitigatedclass.md  IncidentNearMissclass.md  IncidentOngoingclass.md  IncidentStatus.md  Input.md  LLMIntrinsic.md  LargeLanguageModel.md  LargeLanguageModelFamily.md  License.md  Likelihood.md  Modality.md  Organization.md  Principle.md  Question.md  Questionnaire.md  Risk.md  RiskConcept.md  RiskControl.md  (+141 more)
docs/usage/: index.md
graph_export/cypher/: ai-risk-ontology.cypher
graph_export/latex/: ibm-ai-risk-atlas-risks.tex
graph_export/owl/: ai-risk-ontology_schema.ttl
graph_export/yaml/: ai-risk-ontology.yaml
policy_distillation/datasets/: abs_dataset.py  dataset_factory.py  prompt_dataset.py  prompt_response_dataset.py
policy_distillation/datasets/.ipynb_checkpoints/: abs_dataset-checkpoint.py
policy_distillation/fm_factual/: nli_extractor.py
policy_distillation/llms/: ollama_component.py  rits_batch_component.py  rits_component.py
policy_distillation/models/components/: labeller.py  reasoner.py  summarizer.py  verifier.py
policy_distillation/models/guardians/: granite_guardian.py  granite_guardian_batch.py  granite_guardian_factory.py  rits_guardian.py
policy_distillation/pipeline/: clusterer.py  concept_extractor.py  pipeline.py
policy_distillation/utils/: rits_model.py
results/BeaverTails/global/: global_expl.pkl
results/BeaverTails/local/: expl.csv  local_expl.csv
src/risk_atlas_nexus/: library.py
src/risk_atlas_nexus/.ipynb_checkpoints/: library-checkpoint.py
tests/risk_atlas_nexus/: test_library.py
(+60 files in other folders)
