[project]
name = "risk_atlas_nexus"
version = "0.0.5"
authors = [
    { name = "Risk Atlas Nexus", email = "risk-atlas-nexus@ibm.com" },
    { name = "Elizabeth Daly", email = "elizabeth.daly@ie.ibm.com" },
    { name = "Dhaval Salwala", email = "dhaval.vinodbhai.salwala@ibm.com" },
    { name = "Frank Bagehorn", email = "fba@zurich.ibm.com" },
    { name = "Luis Garces-Erice", email = "lga@zurich.ibm.com" },
    { name = "Sean Rooney", email = "sro@zurich.ibm.com" },
    { name = "Inge Vejsbjerg", email = "ingevejs@ie.ibm.com" },
]
keywords = [
    "ai risks",
    "ai safety",
    "ai governance",
    "risk taxonomies",
    "risk identification",
    "risk detection",
    "ai task identification",
    "ai risk management",
    "ai risk questionnaire",
    "ai systems modelling",
    "knowledge graph",
    "chain of thought",
]
description = "Risk Atlas Nexus provides tooling to help bring together disparate resources related to governance of foundation models. "
readme = "README.md"
requires-python = ">=3.11, <3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "linkml",
    "linkml_runtime",
    "pydantic",
    "requests",
    "rich",
    "sssom",
    "txtai",
    "tqdm",
    "logzero",
    "python-dotenv",
    "datasets",
    "openai>=1.0",
    "txtai",
    "isort",
    "pre-commit",
]


[project.optional-dependencies]
wml = ["ibm-watsonx-ai"]
ollama = ["ollama"]
vllm = ["vllm", "xgrammar"]
docs = [
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocs-click",
    "mkdocstrings",
    "griffe_inherited_docstrings",
    "griffe-pydantic",
    "mkdocs-awesome-nav",
]

[tool.isort]
skip_glob = ["vrisk-atlas-nexus/*"]
profile = "black"
line_length = 88
remove_redundant_aliases = true
group_by_package = true
combine_star = true
lines_after_imports = 2

[project.urls]
Homepage = "https://github.com/IBM/risk-atlas-nexus"
Documentation = "https://ibm.github.io/risk-atlas-nexus/"
Changelog = "https://github.com/IBM/risk-atlas-nexus/blob/main/CHANGELOG.md"
Issues = "https://github.com/IBM/risk-atlas-nexus/issues"
